<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/FarmPicture"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                android:src="@mipmap/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UnityCom"
                android:paddingTop="15dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:textColor="@color/accent"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="What is UnityCom?"
            android:textColor="@color/primary_light"
            android:layout_marginLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/info_app1"
            android:gravity="center"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Why is buying local important?"
            android:textColor="@color/primary_light"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/info_app2"
            android:gravity="center"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/info_app3"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How can you use UnityCom?"
            android:textColor="@color/primary_light"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/info_app4"
            android:gravity="center"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/icons"
            android:text="@string/info_app5"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="17sp" />

    </LinearLayout>
</ScrollView>